# change-data-capture

./: .env.example  .gitignore  Makefile  README.md  compose.yml
.github/workflows/: validate.yml
clickhouse/init/: 001_raw_tables.sql  002_current_tables.sql  003_fact_dim_marts.sql  004_observability_tables.sql
dashboard/: app.py  pyproject.toml
debezium/connectors/: postgres-source.json
docs/: architecture.md  cdc-check-walkthrough.md  cdc-design.md  data-model.md  demo-runbook.md  demo-story.md  interview-notes.md  operations-runbook.md  repository-structure.md  screenshots.md
postgres/init/: 001_schema.sql  002_seed.sql  003_publication.sql
scripts/: check_demo_health.sh  compare_batch_vs_cdc.py  create_topics.sh  demo_db.py  pyproject.toml  register_connector.sh  reset_demo.py  run_demo_sequence.sh  simulate_delete_handling.py  simulate_flash_sale.py  simulate_inventory_changes.py  simulate_payment_updates.py  simulate_refunds_and_cancellations.py  validate_project.sh
stream_processor/: pyproject.toml
stream_processor/src/: clickhouse_writer.py  config.py  debezium.py  main.py
stream_processor/src/quality/: run_checks.py
