[project]
name = "shop-cdc-dashboard"
version = "0.1.0"
description = "Streamlit dashboard for the Real-Time Order & Inventory CDC Platform"
requires-python = ">=3.11"
dependencies = [
  "clickhouse-connect>=0.8.0",
  "pandas>=2.2.0",
  "python-dotenv>=1.0.1",
  "streamlit>=1.39.0",
]

[tool.uv]
package = false
